# wow-dashboard

./: .dockerignore  .env.example  .gitignore  .npmrc  .oxfmtrc.json  AGENTS.md  Dockerfile  README.md  bts.jsonc  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  skills-lock.json  tsconfig.json  turbo.json
.claude/: settings.local.json
.codex/environments/: environment.toml
.github/workflows/: ci.yml  deploy-production.yml  release-addon-manual.yml  release.yml  verify.yml
apps/addon/: package.json  package.sh  wow-dashboard-ui.lua  wow-dashboard.lua  wow-dashboard.toc
apps/api/: README.md  package.json  tsconfig.json
apps/app/: electron.vite.config.ts  package.json  tsconfig.node.json  tsconfig.web.json
apps/app-tauri/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/app-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/app-tauri/src-tauri/capabilities/: default.json
apps/app-tauri/src-tauri/src/: addon.rs  api.rs  auth.rs  lib.rs  main.rs  models.rs  saved_variables.rs  settings.rs  sync.rs  tray.rs  updater.rs  wow_folder.rs
apps/web/: components.json  package.json  start.mjs  tsconfig.json  vite.config.ts
apps/worker/: package.json  tsconfig.json
deploy/: .env.production.example  .env.staging.example  Caddyfile  Dockerfile.api  Dockerfile.web  Dockerfile.worker  README.md  backup-postgres.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  test-postgres-backup-restore.sh  update-server.sh  vacuum-analyze.sh
scripts/: dev-stack.mjs
(+152 files in other folders)
