[package]
name = "app-tauri"
version = "1.9.1"
description = "WoW Dashboard desktop uploader"
authors = ["zirkumflex-group"]
edition = "2024"

[lib]
name = "app_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = "2.6.0"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = "0.3"
keyring = "4.0.0"
keyring-core = "1.0.0"
notify = "8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.11.0", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-single-instance = { version = "2.4.2", features = ["deep-link"] }
tauri-plugin-updater = "2.10.1"
tempfile = "3.27.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync", "time"] }
url = "2.5"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.27.0"
